# Curry-Company-Analytics

./: .gitignore  Home.py  README.md  pyproject.toml  requirements.txt
notebooks/: analises.ipynb
pages/: Visao_Empresarial.py  Visao_Entregadores.py  Visao_Restaurantes.py  visao_empresa.py  visao_entregadores.py  visao_restaurantes.py
src/: __init__.py  analysis_tools.py  data_cleaning.py  log_config.py  sider.py  visao_empresa.py  visao_entregadores.py  visao_restaurantes.py
src/config/: __init__.py  sider.py
src/dataframe/: __init__.py  data_manipulation.py
